tests/models/struct/unnamed/u16/pass/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    u16
);
fn main() {}
